2010-09-28  Kevin Ollivier  <kevino@theolliviers.com>

        [wx] Build fix, add missing import.

        * wx/packaging/build-win-installer.py:

2010-09-28  Simon Fraser  <simon.fraser@apple.com>

        No review
        
        Show which tests have been run by dimming them out in the test list.
        
        Adjust some element sizes.
        
        * CSSTestSuiteHarness/harness/harness.css:
        (#test-list > option.untested):
        (#test-list > option.completed):
        (#output):
        (.output-options):
        * CSSTestSuiteHarness/harness/harness.js:
        (Test):
        (TestSuite.prototype.fillTestList):
        (TestSuite.prototype.updateTestList):
        (TestSuite.prototype.setSelectedChapter):
        (TestSuite.prototype.recordResult):
        (TestSuite.prototype.markTestCompleted):
        (TestSuite.prototype.testCompletionStateChanged):
        (TestSuite.prototype.loadTestStatus):

2010-09-28  Simon Fraser  <simon.fraser@apple.com>

        No review.
        
        Implement export of various queries on the test database, sharing
        code with that which displays results inline.

        * CSSTestSuiteHarness/harness/harness.js:
        ():
        (TestSuite.prototype.exportResultsCompletion.var):
        (TestSuite.prototype.exportResultsCompletion):
        (TestSuite.prototype.showResultsForCompletedTests):
        (TestSuite.prototype.exportResultsForCompletedTests):
        (TestSuite.prototype.showResultsForAllTests):
        (TestSuite.prototype.exportResultsForAllTests):
        (TestSuite.prototype.exportResultsForTestsNotRun):
        (TestSuite.prototype.exportResultsForTestsWithStatus):
        (TestSuite.prototype.exportResultsForTestsWithMismatchedResults):

2010-09-28  Simon Fraser  <simon.fraser@apple.com>

        No review.

        Work around uncertainty about the order of database
        transactions when creating the database, so that we don't